migrate to Classfile API